[package]
name        = "kathoey"
version     = "1.0.7"
description = "Rust library for text feminization using open corpus linguistics data"
authors     = [ "Miezhiko" ]
license     = "LGPL-3.0-only"
keywords    = [ "russian", "nlp" ]
repository  = "https://github.com/Miezhiko/Kathoey"
readme      = "README.md"
edition     = "2018"

[dependencies]
xmlparser     = "0.13"
anyhow        = "1"
bincode       = "1.3"
serde_derive  = "1.0"

serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serial_test = "0.5"
