[package]
name          = "kathoey"
version       = "1.1.2"
description   = "Rust library for text feminization using open corpus linguistics data"
authors       = [ "Miezhiko" ]
license       = "LGPL-3.0-only"
keywords      = [ "russian", "nlp" ]
repository    = "https://github.com/Miezhiko/Kathoey"
readme        = "README.md"
edition       = "2021"
rust-version  = "1.58.0"

[lib]
doctest = false

[dependencies]
xmlparser     = "0.13.3"
anyhow        = "1"
bincode       = "2.0.0-rc.1"

[dev-dependencies]
serial_test = "0.8"
